--- a/TicketApp.TicketManagement/TicketApp.TicketManagement.Application/TicketApp.TicketManagement.Application.csproj
+++ b/TicketApp.TicketManagement/TicketApp.TicketManagement.Application/TicketApp.TicketManagement.Application.csproj
@@ -16,7 +16,9 @@
 
   <ItemGroup>
     <Folder Include="Features\Categories\Commands\" />
+    <Folder Include="Features\Categories\Queries\" />
     <Folder Include="Features\Events\Commands\" />
+    <Folder Include="Features\Events\Queries\" />
     <Folder Include="Features\Orders\Commands\" />
     <Folder Include="Features\Orders\Queries\" />
   </ItemGroup>
