--- a/TicketApp.TicketManagement/TicketApp.TicketManagement.Application/TicketApp.TicketManagement.Application.csproj
+++ b/TicketApp.TicketManagement/TicketApp.TicketManagement.Application/TicketApp.TicketManagement.Application.csproj
@@ -7,6 +7,8 @@
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="10.1.1" />
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="8.1.1" />
+    <PackageReference Include="FluentValidation" Version="10.2.3" />
+    <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="10.2.3" />
     <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="9.0.0" />
   </ItemGroup>
 
@@ -15,7 +17,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Features\Categories\Commands\" />
+    <Folder Include="Features\Categories\Commands\CreateCategory\" />
     <Folder Include="Features\Categories\Queries\" />
     <Folder Include="Features\Events\Queries\" />
     <Folder Include="Features\Orders\Commands\" />
