--- a/TicketApp.TicketManagement/TicketApp.TicketManagement.Application/TicketApp.TicketManagement.Application.csproj
+++ b/TicketApp.TicketManagement/TicketApp.TicketManagement.Application/TicketApp.TicketManagement.Application.csproj
@@ -10,6 +10,8 @@
     <PackageReference Include="FluentValidation" Version="10.2.3" />
     <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="10.2.3" />
     <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="9.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Http" Version="2.2.2" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="2.2.0" />
   </ItemGroup>
 
   <ItemGroup>
@@ -17,7 +19,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Features\Categories\Commands\CreateCategory\" />
     <Folder Include="Features\Categories\Queries\" />
     <Folder Include="Features\Events\Queries\" />
     <Folder Include="Features\Orders\Commands\" />
