--- a/TicketApp.TicketManagement/TicketApp.TicketManagement.Infrastructure/TicketApp.TicketManagement.Infrastructure.csproj
+++ b/TicketApp.TicketManagement/TicketApp.TicketManagement.Infrastructure/TicketApp.TicketManagement.Infrastructure.csproj
@@ -9,4 +9,8 @@
     <PackageReference Include="SendGrid" Version="9.24.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\TicketApp.TicketManagement.Application\TicketApp.TicketManagement.Application.csproj" />
+  </ItemGroup>
+
 </Project>
