Revert "restructured project folders"
This reverts commit 92a28ebf2095b617406a3d80b831378c7486907a.

--- a/TicketApp.TicketManagement/TicketApp.TicketManagement.Infrastructure/TicketApp.TicketManagement.Infrastructure.csproj
+++ b/TicketApp.TicketManagement/TicketApp.TicketManagement.Infrastructure/TicketApp.TicketManagement.Infrastructure.csproj
@@ -10,7 +10,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\Core\TicketApp.TicketManagement.Application\TicketApp.TicketManagement.Application.csproj" />
+    <ProjectReference Include="..\TicketApp.TicketManagement.Application\TicketApp.TicketManagement.Application.csproj" />
   </ItemGroup>
 
 </Project>
