--- a/TicketApp.TicketManagement.Api/TicketApp.TicketManagement.Api.csproj
+++ b/TicketApp.TicketManagement.Api/TicketApp.TicketManagement.Api.csproj
@@ -15,6 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="MediatR" Version="9.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="5.0.7">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
