--- a/TicketApp.TicketManagement.Application.UnitTests/TicketApp.TicketManagement.Application.UnitTests.csproj
+++ b/TicketApp.TicketManagement.Application.UnitTests/TicketApp.TicketManagement.Application.UnitTests.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
@@ -23,6 +23,10 @@
 
   <ItemGroup>
     <ProjectReference Include="..\TicketApp.TicketManagement.Application\TicketApp.TicketManagement.Application.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Categories\Commands\" />
   </ItemGroup>
 
 </Project>
